--- a/ansbile_notify.yml
+++ b/ansbile_notify.yml
@@ -7,7 +7,7 @@
       # host: smtp.gmail.com
       # port: 587
       host: localhost
-      port: 25
+      port: 2025
       # username: allen@shotover.com
       # password: "{{ p }}"
       from: alerts@shotover.com
@@ -21,5 +21,5 @@
         Sincerely,
         
         Mr. Roboto'
-      secure: always
+      # secure: always
     delegate_to: localhost
